# python-DS

ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py
ex08/: Loading.py
ex09/: pyproject.toml
ex09/ft_package/: count_in_list.py
ex09/ft_package.egg-info/: PKG-INFO
list00/ex00/: Hello.py
list00/ex04/: whatis.py
list00/ex05/: building.py
list00/ex07/: sos.py
list00/ex08/: Loading.py
list00/ex09/: LICENSE
list00/ex09/ft_package/: count_in_list.py
list00/ex09/ft_package.egg-info/: SOURCES.txt
list01/ex00/: give_bmi.py  tester.py  tmp.py
list01/ex01/: array2D.py  tester.py
list01/ex02/: load_image.py
